config/objects/Location_Contact__c.object
<CustomObject>
    <description>A contact connected to a location.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Location Contacts</relationshipLabel>
        <relationshipName>Location_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Location Contacts</relationshipLabel>
        <relationshipName>Location_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Appointments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Location Contact</label>
    <nameField>
        <label>Location Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>